@@ -1,3 +1,8 @@
+2004-11-30  Bastien Nocera  <hadess@hadess.net>
+
+	* gnome-settings-multimedia-keys.c: (do_exit_action): hack
+	to get the logout action working (Closes: #141472)
+
 2004-11-27  Sergey V. Udaltsov  <svu@gnome.org>
 
 	* gnome-settings-keyboard-xkb.c: support for xmodmap introduced
